--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,26 +1,3 @@
-header li {
-    width: 134px;
-    float: left;
-    border-right: 1px solid #e0e0e0;
-    height: 40px;
-}
-
-p.desc {
-  margin-bottom: 20px;
-
-}
-
-p, ul, ol, table, pre, dl {
-    margin: 0 0 20px;
-}
-
-.toc, .footer {
-  margin: 0 0 2px;
-}
-
-.downloads { margin: 0 0 20px;
-}
-
 footer {
     width: 270px;
     font-size: smaller;
@@ -48,4 +25,23 @@ banner {
 .title {
     flex: 2 auto;
     padding-left: 20px;
+}
+
+
+.flexrow {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.flexcol {
+  display: flex;
+  flex-direction: column;
+}
+.item {
+  flex: 1;
+/*  background-color: blue;     <-- just for demonstration */
+}
+
+.icon-file-pdf:before {
+  content: "\eadf";
 }
