--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,7 @@
           </div>
         </div>
         <div class="item">
-          {% twitter https://twitter.com/idia640 limit=1 %}
-<!--    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/idia640" data-widget-id="893175764513939459">#idia640 Tweets</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> -->
+    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/idia640" data-widget-id="893175764513939459">#idia640 Tweets</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
         </div>
       </div>
 
