--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,13 @@
     </div>
         <hr>
 
-
+      <p><a href="#desc">Course Description<a/><p>
+      <p><a href="#req">Requirements<a/></p>
+      <p><a href="#obj">Objectives<a/></p>
+      <p><a href="#syll">Syllabus<a/></p>
+      <p><a href="#texts">Texts<a/></p>
+      <p><a href="#related">Related Reading<a/></hp>
+      <hr>
       <div class="flexcol">
         <div class="flexrow">
           <div class="item">
@@ -21,10 +27,9 @@
           </div>
         </div>
         <div class="item">
-    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/idia640" data-widget-id="893175764513939459">#idia640 Tweets</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
+    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/idia640" data-widget-id="893175764513939459">#idia640 Tweets</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
       </div>
-
     </header>
 
       <section>
