Updates to syllabus

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-Maintained by <a href="https://ahiddendiscourse.com">Lisa D. Harper</a>
+&copy; <a href="https://ahiddendiscourse.com">Lisa D. Harper</a>
 </footer>
 </div>
 <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
