--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,6 +11,8 @@
 
 .title {
     grid-area: title;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .header {
@@ -33,7 +35,7 @@
   grid-template-columns: 100px 270px auto;
   grid-template-rows: 100px auto;
   grid-template-areas:
-    "avatar title header"
+    "avatar title main"
     "sidebar sidebar main"
     "footer footer footer";
     grid-row-gap: 20px;
