--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,7 +41,7 @@
   grid-template-areas:
     "avatar title main"
     "sidebar sidebar main"
-    "spacer footer footer";
+    "spacer spacer footer";
     grid-row-gap: 20px;
     grid-col-gap: 50px;
     display: grid;
